2009-12-07  Perry McFarlane  <perry_m@fastmail.fm>
* USAGE, af80.[ch], atari.c, atari_sdl.c, cartridge.c, cfg.c, configure.ac,
cpu.[ch], monitor.c, pbi.c, TODO:
  Austin Franklin 80 Column card
  Execution history now stores opcode data.
  update TODO


2009-11-21  Perry McFarlane  <perry_m@fastmail.fm>
* sio.c: replace random with rand for portability
  Commiting patch submitted by Tomasz Krasuski <tomasz.krasuski@interia.pl>
* DOC/USAGE, Makefile.in, atari.c, atari800.man, atari_ntsc.[ch] (removed),
  atari_ntsc/atari_ntsc.[ch], atari_ntsc/atari_ntsc.config.h,
  atari_ntsc/atari_ntsc_impl.h, atari_sdl.c, configure.ac:
  Update to atari_ntsc based on Blargg's nes_ntsc 0.2.2, correct colour phases,
  other fixes.


2009-10-08  Piotr Fusik  <fox@scene.pl>
  Commiting patch submitted by Tomasz Krasuski <tomasz.krasuski@interia.pl>
* atari_sdl.c: fixed missing leftmost column in 16bpp and 32bpp modes


2009-09-29  Piotr Fusik  <fox@scene.pl>
* ui.c: sf.net bug #2868897 "Build fails on platforms without sound"


2009-09-20  Perry McFarlane  <perry_m@fastmail.fm>
* atari_sdl.c: fix support of -nosound with SYNCHRONIZED_SOUND
* Makefile.in: use more memory for javac for javanvm version
* input.c: remove unused result variable from call to mouse_step() to
suppress warning.
* javanvm/atari800.java: fix an issue with the screen sometimes not showing.


2009-09-18  Perry McFarlane  <perry_m@fastmail.fm>
* DOC/BUGS, atari.[ch], atari_sdl.c, cfg.c, configure.ac, mzpokeysnd.[ch],
pbi_xld.c, platform.h, ui.c USAGE : added synchronized sound for the SDL
version.
Sound can now be generated in sync with the rest of the emulation and not in a
separate thread.  VOL_ONLY_SOUND is no longer needed.  GTIA and POKEY
digisounds now work properly.  The old pokeysnd.c will not work with
synchronized sound, only mzpokeysnd will be supported. 16 bit sound is now
the default for SDL.  Use -audio8 for 8 bit SDL sound.
Improved mzpokeysnd speed somewhat.


2009-08-12  Piotr Fusik  <fox@scene.pl>