@@ -1930,7 +1930,7 @@ void XEP80_StateSave(void)
 	StateSav_SaveINT(&XEP80_enabled, 1);
 	if (XEP80_enabled) {
 		StateSav_SaveINT(&XEP80_port, 1);
-		StateSav_SaveINT(&PLATFORM_xep80, 1);
+		StateSav_SaveINT(&PLATFORM_show_80, 1);
 		StateSav_SaveINT(&output_state, 1);
 		StateSav_SaveINT(&output_word, 1);
 		StateSav_SaveINT(&input_count, 1);
@@ -2035,17 +2035,17 @@ void XEP80_StateRead(void)
 		XEP80_enabled = TRUE;
 		/* not correct for SDL version */
 #if 0
-		if (PLATFORM_xep80 != local_xep80)
-			PLATFORM_SwitchXep80();
+		if (PLATFORM_show_80 != local_xep80)
+			PLATFORM_Switch80();
 #endif
-		PLATFORM_xep80 = local_xep80;
+		PLATFORM_show_80 = local_xep80;
 		}
 	else {
 		XEP80_enabled = FALSE;
 		/* not correct for SDL version */
 #if 0
-		if (PLATFORM_xep80)
-			PLATFORM_SwitchXep80();
+		if (PLATFORM_show_80)
+			PLATFORM_Switch80();
 #endif
 		}
 }
